--- a/2020.ipynb
+++ b/2020.ipynb
@@ -17,6 +17,7 @@
     "IMG_FLAG = QImage(\"./images/flag.png\")\n",
     "IMG_START = QImage(\"./images/spielfigur_2.png\")\n",
     "IMG_CLOCK = QImage(\"./images/clock-select.png\")\n",
+    "#IMG_QUESTION = QImage(\"./images/question.png\")\n",
     "\n",
     "NUM_COLORS = {\n",
     "    1: QColor('#f44336'),\n",
@@ -52,6 +53,7 @@
     "    expandable = pyqtSignal(int, int)\n",
     "    clicked = pyqtSignal()\n",
     "    ohno = pyqtSignal()\n",
+    "    #aha = pyqtSignal()\n",
     "\n",
     "    def __init__(self, x, y, *args, **kwargs):\n",
     "        super(Pos, self).__init__(*args, **kwargs)\n",
@@ -64,6 +66,7 @@
     "    def reset(self):\n",
     "        self.is_start = False\n",
     "        self.is_mine = False\n",
+    "        #self.is_question = False\n",
     "        self.adjacent_n = 0\n",
     "\n",
     "        self.is_revealed = False\n",
@@ -93,6 +96,9 @@
     "            if self.is_start:\n",
     "                p.drawPixmap(r, QPixmap(IMG_START))\n",
     "\n",
+    "            #elif self.question:\n",
+    "            #p.drawPixmap(r, QPixmap(IMG_QUESTION))\n",
+    "            \n",
     "            elif self.is_mine:\n",
     "                p.drawPixmap(r, QPixmap(IMG_BOMB))\n",
     "\n",
@@ -135,6 +141,9 @@
     "\n",
     "            if self.is_mine:\n",
     "                self.ohno.emit()\n",
+    "                \n",
+    "            #elif self.question:\n",
+    "                #self.aha.emit()\n",
     "\n",
     "\n",
     "class MainWindow(QMainWindow):\n",
